# neuroswarm

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: architecture.md  brain-vs-swarm.md  gbrain-patterns.md
neuroswarm/: __init__.py  dispatcher.py
neuroswarm/brain/: __init__.py  brain_first.py  enrichment.py  knowledge_store.py  resolver.py  signal_detector.py
neuroswarm/bridge/: __init__.py  context_feed.py
neuroswarm/swarm/: __init__.py  council.py  dimension_map.py  pre_spawn.py  refusal_routing.py  sparring.py
skills/brain-first/: SKILL.md
skills/brain-first/scripts/: brain_check.py
skills/hybrid-search/: SKILL.md
skills/necroswarm/: SKILL.md
skills/refusal-routing/: SKILL.md
skills/refusal-routing/scripts/: refusal_route.py
skills/resolver/: SKILL.md
skills/resolver/scripts/: resolve.py
skills/signal-detection/: SKILL.md
skills/signal-detection/scripts/: detect.py
tests/: __init__.py  test_brain_first.py  test_council.py  test_dispatcher.py  test_refusal_routing.py  test_resolver.py  test_signal_detector.py
